--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ header {
 /* Parallax Home Section */
 .parallax {
     height: 100vh;
-    background-image: url('images/.jpg');
+    background-image: url('images/01.png');
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
